--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <body>
         <!-- here's where all the content goes  -->
         <h1>My Portfolio</h1>
+        <h2>Here's some of my recent work:</h2>
         <hr />
-        <h2>Here's some of my recent work</h2>
+ 
+        <a href="./public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
+        <img src="./assets/images/movie-ranking-website.png" alt="screenshot of movie ranking website" height="200">
 
+        <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
+        <img src="./assets/images/birthday-website.png" alt="screenshot of birthday website" height="200">
+
+        <hr />
+        
+        <a href="./public/about.html">About Me</a>
+        <a href="./public/contact.html">Contact Me</a>
+        
     </body>
 </html>
 
